# ssrNative_macOS

./: README.md
depends/http-parser/: http_parser.c  http_parser.h  http_parser_wrapper.h
depends/http-parser/win32/: test.sln  test.vcxproj  test.vcxproj.filters
depends/json-c/staticbuild/: CMakeLists.txt
depends/json-c/win32/: config.h
depends/libbloom/: bloom.h
depends/libopenssl_MacOS_x86_64.sdk/lib/: libcrypto.1.1.dylib  libssl.1.1.dylib
depends/libopenssl_MacOS_x86_64.sdk/lib/engines-1.1/: capi.dylib  padlock.dylib
depends/libopenssl_MacOS_x86_64.sdk/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
depends/libsodium/ios/libsodium/: libsodium.h
depends/libsodium/ios/libsodium.xcodeproj/: project.pbxproj
depends/libsodium/ios/libsodium.xcodeproj/xcuserdata/huanglong.xcuserdatad/xcschemes/: xcschememanagement.plist
depends/libuv/ios/libuv/: libuv.h
depends/libuv/ios/libuv.xcodeproj/: project.pbxproj
depends/libuv/ios/libuv.xcodeproj/xcuserdata/huanglong.xcuserdatad/xcschemes/: xcschememanagement.plist
depends/libuv/src/: inet.c  uv-common.c  uv-common.h
depends/libuv/src/unix/: getaddrinfo.c  tcp.c  udp.c
depends/mbedtls/include/mbedtls/: aes.h  cipher.h  config.h  ssl.h  x509_crt.h
depends/mbedtls/ios/mbedtls/: mbedtls.h
depends/mbedtls/ios/mbedtls.xcodeproj/: project.pbxproj
depends/mbedtls/ios/mbedtls.xcodeproj/xcuserdata/huanglong.xcuserdatad/xcschemes/: xcschememanagement.plist
depends/mbedtls/visualc/VS2010/: benchmark.vcxproj  cert_app.vcxproj  cert_req.vcxproj  cert_write.vcxproj  crl_app.vcxproj  crypt_and_hash.vcxproj  dh_client.vcxproj  dh_genprime.vcxproj  dh_server.vcxproj  dtls_client.vcxproj  dtls_server.vcxproj  ecdh_curve25519.vcxproj  ecdsa.vcxproj  gen_entropy.vcxproj  gen_key.vcxproj  gen_random_ctr_drbg.vcxproj  gen_random_havege.vcxproj  generic_sum.vcxproj  hello.vcxproj  key_app.vcxproj  key_app_writer.vcxproj  load_roots.vcxproj  mbedTLS.vcxproj  mini_client.vcxproj  mpi_demo.vcxproj  pem2der.vcxproj  pk_decrypt.vcxproj  pk_encrypt.vcxproj  pk_sign.vcxproj  pk_verify.vcxproj  query_compile_time_config.vcxproj  req_app.vcxproj  rsa_decrypt.vcxproj  rsa_encrypt.vcxproj  rsa_genkey.vcxproj  rsa_sign.vcxproj  rsa_sign_pss.vcxproj  rsa_verify.vcxproj  rsa_verify_pss.vcxproj  selftest.vcxproj  (+10 more)
depends/uri-encode/src/: uri_encode.h
depends/uv-mbed/src/: bio.h  uv-mbed.c
ios/: byteTool.h  symbols  tls.c  totossr.h  totossr.pch  totossr.sh  totossrbk.list
ios/ssrNative.xcodeproj/: project.pbxproj
ios/ssrNative.xcodeproj/project.xcworkspace/xcuserdata/huanglong.xcuserdatad/: UserInterfaceState.xcuserstate
ios/ssrNative.xcodeproj/xcuserdata/huanglong.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/v2ray_adong/: fnv.h  hash_32a.c  longlong.h  ss_obfs_tls_pro.c  ss_obfs_tls_pro.h  vmessCrypto.c  vmessCrypto.h  vmessPro.c  vmessPro.h  vmessTools.c  vmessTools.h  vmess_ssl_pro.c  vmess_ssl_pro.h
src/: aead.c  aead.h  cache.h  dump_info.c  encrypt.h  ppbloom.c  ppbloom.h  sockaddr_universal.c  sockaddr_universal.h  ssr_cipher_names.c  ssr_cipher_names.h  ssr_executive.c  ssr_executive.h  ssr_qr_code.h  ssrbuffer.c  ssrbuffer.h  ssrutils.c  ssrutils.h  tunnel.c  tunnel.h  udp_ssr_client.c  udprelay.c  udprelay.h  websocket_basic.c  websocket_basic.h
src/client/: client.c  defs.h  listener.c  s5.c  s5.h  ssr_client_api.h  tls_cli.c  tls_cli.h
src/obfs/: auth.c  auth.h  auth_chain.c  auth_chain.h  crc32.h  http_simple.c  http_simple.h  obfs.c  obfs.h  obfsutil.h  tls1.2_ticket.c  tls1.2_ticket.h  verify.h
